--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "name": "Focus - To keep you focused on your tasks",
   "short_name": "Focus",
   "description": "Web App to focus on tasks",
-  "version": "1.0.2",
-  "author": "Umar",
+  "version": "1.0.3",
+  "author": "Umar, Waleed",
   "icons": {
     "128": "icon.png"
   },
